# ERDP

./: .clang-format  .clang-tidy  .clangd  .gitignore  Architecture.md  CMakeLists.txt  CMakePresets.json  QuickStart.md  README.md  clear_mdk.bat  mdk_erdp.uvprojx  mdk_gd32.uvprojx
Doc/: Architecture.xlsx
MDK/: .gitignore  erdp_gd32f470_freertos.uvprojx  erdp_stm32f407_freertos.uvprojx
Project/MDK/: mdk_gd32.uvprojx
Scripts/OpenOCD/: openocd_cmsis-dap.cfg  openocd_gd32f470.cfg  openocd_gd32f470_stlink.cfg  openocd_stm32f407.cfg  openocd_stm32f407_stlink.cfg  openocd_stm32f4_stlink.cfg  target_gd32f470.cfg  target_stm32f407.cfg
Source/: erdp_config.h
Source/Adapter/log/: log_adapter.cpp  log_adapter.hpp
Source/Application/: CMakeLists.txt  gd32f4xx_it.c  main.cpp  systick.h
Source/Board/: board.h
Source/Common/: erdp_assert.h  erdp_config.h  syscalls.c  thread_config.h
Source/HAL/: CMakeLists.txt  erdp_hal.h
Source/HAL/DMA/: CMakeLists.txt  erdp_hal_dma.cpp  erdp_hal_dma.hpp
Source/HAL/EXTI/: erdp_hal_exti.cpp  erdp_hal_exti.hpp
Source/HAL/GPIO/: CMakeLists.txt  erdp_hal_gpio.hpp
Source/HAL/I2C/: erdp_hal_i2c.hpp
Source/HAL/SPI/: CMakeLists.txt  erdp_hal_spi.cpp  erdp_hal_spi.hpp
Source/HAL/UART/: CMakeLists.txt  erdp_hal_uart.cpp  erdp_hal_uart.hpp
Source/Interface/: CMakeLists.txt  erdp_interface.h
Source/Interface/Drivers/: CMakeLists.txt  erdp_if_dma.h  erdp_if_spi.h  erdp_if_sys.h  erdp_if_uart.h
Source/Interface/Drivers/GD32F4XX/: CMakeLists.txt  erdp_if_sys.c  erdp_if_uart.c
Source/Interface/Drivers/GD32F4XX/src/: erdp_if_gpio.c  erdp_if_sys.c  erdp_if_test.c
Source/Interface/Drivers/STM32F4XX/: CMakeLists.txt  erdp_if_dma.c  erdp_if_gpio.c  erdp_if_spi.c  erdp_if_stm32f4_def.h  erdp_if_sys.c  erdp_if_uart.c
Source/Interface/Drivers/STM32F4XX/inc/: erdp_if_uart.h
Source/Interface/Drivers/STM32F4XX/src/: erdp_if_uart.c
Source/Interface/Hardware/: CMakeLists.txt
Source/Interface/Hardware/GD32F4XX/: CMakeLists.txt
Source/Interface/Hardware/GD32F4XX/src/: erdp_if_exti.c  erdp_if_test.c
Source/Interface/Hardware/STM32F4XX/: CMakeLists.txt
Source/Interface/Hardware/STM32F4XX/src/: erdp_if_i2c.c  erdp_if_test.c
Source/Interface/Hardware/inc/: erdp_if_exti.h  erdp_if_gpio.h  erdp_if_spi.h  erdp_if_uart.h
Source/Interface/Hardware/src/: erdp_if_exti.c  erdp_if_gpio.c  erdp_if_spi.c  erdp_if_uart.c
Source/Interface/Hardware/stm32f407vet6/inc/: erdp_if_i2c.h
Source/Interface/RTOS/: CMakeLists.txt  erdp_if_rtos.c  erdp_if_rtos.h
Source/Interface/RTOS/FreeRTOS/: CMakeLists.txt  erdp_if_rtos.c  erdp_if_rtos.h
Source/Kernel/: CMakeLists.txt
Source/Kernel/Drivers/: CMakeLists.txt
Source/Kernel/Drivers/GD32F4XX/: CMakelists.txt  gd32f4xx_it.c
Source/Kernel/Drivers/GD32F4XX/CMSIS/GD/GD32F4xx/Source/GCC/: startup_gd32f450_470.s
Source/Kernel/Drivers/GD32F4XX/Linker/: GD32F470ZIT6_FLASH.ld
Source/Kernel/Drivers/GD32F4XX/Test/: CMakeLists.txt  driver_test.c
Source/Kernel/Drivers/STM32F4XX/: CMakeLists.txt
Source/Kernel/Drivers/STM32F4XX/Linker/: STM32F407VET6_FLASH.ld
Source/Kernel/Drivers/STM32F4XX/Test/: CMakeLists.txt
Source/Kernel/RTOS/: CMakeLists.txt
Source/Kernel/RTOS/FreeRTOS/: FreeRTOSConfig.h
Source/OSAL/: CMakeLists.txt  erdp_heap.cpp  erdp_heap.hpp  erdp_osal.cpp  erdp_osal.h  erdp_osal.hpp  erdp_osal_event.cpp  erdp_osal_event.hpp  erdp_osal_fifo.hpp  erdp_osal_queue.cpp  erdp_osal_queue.hpp  erdp_osal_ringbuffer.cpp  erdp_osal_ringbuffer.hpp  erdp_osal_semaphore.hpp  erdp_osal_timer.cpp  erdp_osal_timer.hpp
Source/Service/: CMakeLists.txt
Source/Service/LCD/: CMakeLists.txt  lcd_service.cpp  lcd_service.hpp
Source/Service/Log/: CMakeLists.txt  log_service.cpp  log_service.hpp
Source/Test/: CMakeLists.txt  erdp_hal_test.cpp  erdp_if_rtos_test.c  erdp_if_test.c  erdp_osal_test.cpp
Source/Test/GD32F4XX/: erdp_osal_test.cpp
Source/Test/STM32F4XX/: CMakelists.txt  driver_test.c  erdp_if_rtos_test.c  erdp_osal_test.cpp  erdp_test_cfg.h
cmake/: flash_by_install.cmake  flash_script.cmake
